# time_series_general

./: Auto Arima.ipynb  Varejo Time Series.ipynb  pyproject.toml
