[tool.poetry]
name = "series temporais"
version = "0.1.0"
description = ""
authors = ["waltergonzaga <walterbiel1237@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.23.0"
nbformat = "^5.10.4"
pmdarima = "^2.0.4"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
